--- a/classificacao_segmento_empresa.ipynb
+++ b/classificacao_segmento_empresa.ipynb
@@ -14854,6 +14854,48 @@
     "          class_names=lista_segmentos,\n",
     "          filled=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcccadbb",
+   "metadata": {},
+   "source": [
+    "### Salvar Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "d4ff45c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modelo_classificacao_decision_tree.pkl']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Criar um Pipeline tunado\n",
+    "dt_model_tunado = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                                  ('classifier', \n",
+    "                                        DecisionTreeClassifier(min_samples_leaf=estudo_decisiontree.best_params['min_samples_leaf'],\n",
+    "                                        max_depth=estudo_decisiontree.best_params['max_depth'])\n",
+    ")])\n",
+    "\n",
+    "# Treinar modelo tunado\n",
+    "dt_model_tunado.fit(X, y)\n",
+    "\n",
+    "# Salvar o modelo\n",
+    "joblib.dump(dt_model_tunado, 'modelo_classificacao_decision_tree.pkl')"
+   ]
   }
  ],
  "metadata": {
